--- a/arduino.ipynb
+++ b/arduino.ipynb
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18925fc0",
+   "id": "4d5a2ca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2215,7 +2215,7 @@
    "id": "38d6e457",
    "metadata": {},
    "source": [
-    "### 최적의 hyper-parameter 찾기"
+    "### 최적의 hyper-parameter 설정"
    ]
   },
   {
